// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamespaceMemberFormDialogEdit Dialog closed Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="edit-title" class="v-list-item__title text-left">Edit</div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`NamespaceMemberFormDialogEdit Dialog opened Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="edit-title" class="v-list-item__title text-left">Edit</div>
  </div>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
